public enum Roles {
    ADMIN, 
    ESTANDAR;

}
