@startuml

class User{
   - String name
   - Double id
   - String username
   - Double password
   - Rol  roles
   - Record [] records
   - int historyCount
   + printHistory()
   + addAction()



}
class UserManagement{
   - User [] users
   - Integer cantidadUsuarios
   + CrearUsuario()
   + DeleteUser()
   + ActUser()
   + BuscarPorId()
}
enum Roles{
    ADMIN
    ESTANDAR
}
class Record{
   - String action
   - Long date
   + toString()
}

class Autenticacion{
   User [] users;
   + login()
   + logout()
}

User --> Roles
User --o Record
Autenticacion --> User
UserManagement -- User




@enduml